--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-fastapi
-uvicorn
-gunicorn
-jinja2
-scikit-learn
-xgboost
-joblib
-pandas
-numpy
-matplotlib
+fastapi==0.111.0
+uvicorn[standard]==0.30.1
+gunicorn==22.0.0
+jinja2==3.1.4
+scikit-learn==1.2.2
+xgboost==2.0.3
+joblib==1.3.2
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.9.0
+python-multipart==0.0.9
