--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,9 @@
-pip>=25.1
-setuptools>=68.0
-wheel>=0.41
-
-fastapi==0.100.0
-uvicorn[standard]==0.23.2
-gunicorn==21.2.0
-jinja2==3.1.2
-scikit-learn==1.2.2
-xgboost==1.7.6
-joblib==1.3.2
-pandas==1.5.3
-numpy==1.23.5
-python-multipart==0.0.6
+fastapi==0.110.0
+uvicorn[standard]==0.29.0
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.4.2
+joblib==1.4.2
+python-multipart==0.0.9
+jinja2==3.1.4
+openpyxl==3.1.5
