--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 fastapi==0.110.0
 uvicorn[standard]==0.29.0
+gunicorn==21.2.0
+jinja2==3.1.4
+scikit-learn==1.4.2
+xgboost==2.0.3
+joblib==1.4.2
 pandas==2.2.2
 numpy==1.26.4
-scikit-learn==1.4.2
-joblib==1.4.2
+matplotlib==3.8.4
 python-multipart==0.0.9
-jinja2==3.1.4
 openpyxl==3.1.5
