--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-fastapi==0.100.0
-uvicorn[standard]==0.23.2
+fastapi==0.110.0
+uvicorn==0.29.0
 gunicorn==21.2.0
-jinja2==3.1.2
+jinja2==3.1.3
 scikit-learn==1.2.2
 xgboost==1.7.6
 joblib==1.3.2
-pandas==2.0.3
-numpy==1.24.4
-matplotlib==3.7.2
+pandas==2.1.4
+numpy==1.26.4
+matplotlib==3.7.3
 python-multipart==0.0.6
